# TheCage

./: .gitignore  README.md  pyproject.toml
thecage/: manage.py  pyproject.toml
thecage/media/upload/: medscot.html
thecage/polls/: admin.py  models.py  urls.py  views.py
thecage/polls/migrations/: 0001_initial.py  0002_auto_20210318_1424.py  0003_auto_20210318_1428.py  0004_auto_20210318_1436.py  0005_cryptid_photo.py  0006_auto_20210318_1646.py  0007_auto_20210318_1711.py  0008_auto_20210319_1056.py  0009_auto_20210319_1157.py  0010_location_photo.py
thecage/polls/static/css/: all_cryptids_here.css  cryptid_disc_date.css  cryptids.css  indicryptids.css  location.css  main.css
thecage/polls/static/polls/: location.css
thecage/polls/templates/: all_cryptids_here.html  base.html  crypid_disc_date.html  crypids.html  cryptid_disc_date.html  footer.html  indicryptids.html  location.html  main.html  navbar.html
thecage/polls/templates/polls/: all_crypids_here.html  all_cryptids_here.html  crypid_disc_date.html  crypids.html  cryptid_disc_date.html  cryptids.html  indicrypids.html  indicryptids.html  location.html  locations.html
thecage/thecage/: asgi.py  settings.py  urls.py  wsgi.py
